[gd_scene load_steps=24 format=3 uid="uid://b4r4d6g0vgiji"]

[ext_resource type="Script" uid="uid://cfd08f720gnuo" path="res://Chapter2lvls/ch_2_b_ack_rooms.gd" id="1_lsdch"]
[ext_resource type="PackedScene" uid="uid://dgo2istfpbd03" path="res://camera/camera_2d.tscn" id="1_pxf5j"]
[ext_resource type="AudioStream" uid="uid://cfrkdcxbbcs84" path="res://Sounds/Minimalist4.mp3" id="2_cdssp"]
[ext_resource type="Texture2D" uid="uid://cgijf0u8gfrvd" path="res://Horror asset/Sprite-0001.png" id="2_dfw6l"]
[ext_resource type="PackedScene" uid="uid://c6tnrclb70hyi" path="res://Character/player.tscn" id="3_lsdch"]
[ext_resource type="Script" uid="uid://b7hml2dvqgwqo" path="res://Chapter2lvls/siren_head.gd" id="5_0hmnk"]
[ext_resource type="Texture2D" uid="uid://6mm2vudujms2" path="res://Horror asset/Siren head for games.png" id="5_t2j32"]
[ext_resource type="AudioStream" uid="uid://cdjej28hemtdf" path="res://Horror asset/Backroom Tile set/Radio/Radio 1 Small Clicks w Buzz.wav" id="6_t2j32"]
[ext_resource type="AudioStream" uid="uid://lsbjwctespjp" path="res://Sounds/sound4.mp3" id="8_upxvn"]
[ext_resource type="AudioStream" uid="uid://d38oxiroos880" path="res://Sounds/jumpscare-94984.mp3" id="9_evu65"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_evu65"]
texture = ExtResource("2_dfw6l")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_cdssp"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_evu65")

[sub_resource type="AtlasTexture" id="AtlasTexture_0hmnk"]
atlas = ExtResource("5_t2j32")
region = Rect2(0, 97, 55, 97)

[sub_resource type="SpriteFrames" id="SpriteFrames_upxvn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hmnk")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evu65"]
size = Vector2(17, 63.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdssp"]
size = Vector2(33, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hmnk"]
size = Vector2(167, 7)

[sub_resource type="Animation" id="Animation_at1ld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dfjjl"]
resource_name = "death-text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sd18g"]
_data = {
&"RESET": SubResource("Animation_at1ld"),
&"death-text": SubResource("Animation_dfjjl")
}

[sub_resource type="Animation" id="Animation_cdssp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_evu65"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wyrm5"]
_data = {
&"RESET": SubResource("Animation_cdssp"),
&"fade": SubResource("Animation_evu65")
}

[node name="ch2_BAckRooms" type="Node2D"]
script = ExtResource("1_lsdch")

[node name="replay sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(578, -34)
stream = ExtResource("2_cdssp")
volume_db = 12.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cdssp")
format = 2
layer_0/tile_data = PackedInt32Array(589822, 65536, 0, 655358, 65536, 0, 589823, 65536, 0, 655359, 65536, 0, 524288, 65536, 0, 589824, 65536, 0, 524289, 65536, 0, 589825, 65536, 0, 524290, 65536, 0, 589826, 65536, 0, 524291, 65536, 0, 589827, 65536, 0, 524292, 65536, 0, 589828, 65536, 0, 524293, 65536, 0, 589829, 65536, 0, 524294, 65536, 0, 589830, 65536, 0, 524295, 65536, 0, 589831, 65536, 0, 524296, 65536, 0, 589832, 65536, 0, 524297, 65536, 0, 589833, 65536, 0, 524298, 65536, 0, 589834, 65536, 0, 524299, 65536, 0, 589835, 65536, 0, 524300, 65536, 0, 589836, 65536, 0, 524301, 65536, 0, 589837, 65536, 0, 524302, 65536, 0, 589838, 65536, 0, 524303, 65536, 0, 589839, 65536, 0, 524304, 65536, 0, 589840, 65536, 0, 524305, 65536, 0, 589841, 65536, 0, 524306, 65536, 0, 589842, 65536, 0, -131055, 65536, 0, -65519, 65536, 0, 17, 65536, 0, 65553, 65536, 0, 131089, 65536, 0, 196625, 65536, 0, 262161, 65536, 0, 327697, 65536, 0, 393233, 65536, 0, 458769, 65536, 0, -131054, 65536, 0, -65518, 65536, 0, 18, 65536, 0, 65554, 65536, 0, 131090, 65536, 0, 196626, 65536, 0, 262162, 65536, 0, 327698, 65536, 0, 393234, 65536, 0, 458770, 65536, 0, -3, 65536, 0, 65533, 65536, 0, -2, 65536, 0, 65534, 65536, 0, -1, 65536, 0, 65535, 65536, 0, -65536, 65536, 0, 0, 65536, 0, -65535, 65536, 0, 1, 65536, 0, -65534, 65536, 0, 2, 65536, 0, -65533, 65536, 0, 3, 65536, 0, -65532, 65536, 0, 4, 65536, 0, -65531, 65536, 0, 5, 65536, 0, -65530, 65536, 0, 6, 65536, 0, -65529, 65536, 0, 7, 65536, 0, -65526, 65536, 0, 10, 65536, 0, -65525, 65536, 0, 11, 65536, 0, -65524, 65536, 0, 12, 65536, 0, -65523, 65536, 0, 13, 65536, 0, -65522, 65536, 0, 14, 65536, 0, -65521, 65536, 0, 15, 65536, 0, -65520, 65536, 0, 16, 65536, 0, -4, 65536, 0, 65532, 65536, 0, 131068, 65536, 0, 196604, 65536, 0, 262140, 65536, 0, 327676, 65536, 0, 393212, 65536, 0, 458748, 65536, 0, 524284, 65536, 0, 589820, 65536, 0, 655356, 65536, 0, 131069, 65536, 0, 196605, 65536, 0, 262141, 65536, 0, 327677, 65536, 0, 393213, 65536, 0, 458749, 65536, 0, 524285, 65536, 0, 589821, 65536, 0, 655357, 65536, 0, 131070, 65536, 0, 196606, 65536, 0, 262142, 65536, 0, 131071, 65536, 0, 196607, 65536, 0, 262143, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, -65528, 0, 0, 8, 0, 0, -65527, 0, 0, 9, 0, 0)

[node name="Camera2D" parent="." instance=ExtResource("1_pxf5j")]
position = Vector2(579, 301)

[node name="Player" parent="." instance=ExtResource("3_lsdch")]
position = Vector2(578, -34)

[node name="SirenHead" type="CharacterBody2D" parent="."]
position = Vector2(-65, 367)
scale = Vector2(3, 3)
script = ExtResource("5_0hmnk")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SirenHead"]
sprite_frames = SubResource("SpriteFrames_upxvn")
animation = &"IDLE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SirenHead"]
position = Vector2(1.5, -1.83334)
shape = SubResource("RectangleShape2D_evu65")

[node name="SirenHeadAttack" type="Area2D" parent="SirenHead"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SirenHead/SirenHeadAttack"]
self_modulate = Color(0.141176, 0.207843, 1, 1)
position = Vector2(3.5, -1.5)
shape = SubResource("RectangleShape2D_cdssp")

[node name="RAdioSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_t2j32")
volume_db = 5.333

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(54, 503.5)
shape = SubResource("RectangleShape2D_0hmnk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.5
offset_top = -20.0
offset_right = 199.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
bbcode_enabled = true
text = "[shake]Press [rainbow]Enter[/rainbow] to Replay[/shake]"
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sd18g")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_upxvn")
volume_db = 2.0

[node name="Jumpscare-94984" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_evu65")
volume_db = -20.0

[node name="JumpScare_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_evu65")
volume_db = -20.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.831373, 0.666667, 0.337255, 1)

[node name="arriveanim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wyrm5")
}

[connection signal="body_entered" from="SirenHead/SirenHeadAttack" to="." method="_on_siren_head_attack_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
